Some logos were too small, fixed.

--- a/2020/styles/index.scss
+++ b/2020/styles/index.scss
@@ -221,7 +221,7 @@ body{
   flex-grow: 1;
 }
 .companyimage{
-  width: 2rem;
+  width: 35vw;
   margin: auto;
 }
 
@@ -339,7 +339,6 @@ p .aboutdesc{
   text-align: left;
   padding: 1rem;
   font-size: 1.5em;
-  margin: auto;
   font-family: 'Work Sans', sans-serif;
 }
 
